--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.murtuza_1.ToDoList"
+      "package": "com.murtuza_1.ToDoList",
+      "versionCode": 2
+
     },
     "web": {
       "bundler": "metro",
